--- a/electron-builder.yml
+++ b/electron-builder.yml
@@ -7,11 +7,13 @@ copyright: 'Copyright © 2024 Limbo-Studios'
 asar: true
 compression: 'maximum'
 
+
 files:
   - '!{dist,.gitignore,.vscode,docs,dev-app-update.yml,.nvmrc,.eslintrc.json}'
 
 extraResources:
   - 'libraries'
+  - 'lang'
 
 # Windows Configuration
 win: 
