--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "Limbolauncher",
-  "version": "1.5.0",
+  "name": "limbolauncher",
+  "version": "1.6.0",
   "productName": "Limbo Launcher",
   "description": "Launcher de Limbo-Studios",
   "author": "IkyMax",
