--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "dist:win": "npm run dist -- -w",
     "dist:mac": "npm run dist -- -m",
     "dist:linux": "npm run dist -- -l",
-    "lint": "eslint --config .eslintrc.json ."
+    "lint": "eslint --config .eslintrc.json .",
+    "extraverif": "node app/assets/extraverif/extraverif.js"
   },
   "engines": {
     "node": "20.x.x"
@@ -32,7 +33,7 @@
     "fs-extra": "^11.1.1",
     "github-syntax-dark": "^0.5.0",
     "got": "^11.8.5",
-    "limbo-core": "~1.2.6",
+    "limbo-core": "~1.2.9",
     "helios-distribution-types": "^1.3.0",
     "jquery": "^3.7.1",
     "lodash.merge": "^4.6.2",
