--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "extraverif": "node app/assets/extraverif/extraverif.js"
   },
   "engines": {
-    "node": "20.x.x"
+    "node": "22.x.x"
   },
   "dependencies": {
     "@electron/remote": "^2.1.2",
@@ -33,17 +33,18 @@
     "fs-extra": "^11.1.1",
     "github-syntax-dark": "^0.5.0",
     "got": "^11.8.5",
-    "limbo-core": "~1.3.0",
+    "limbo-core": "~1.3.1",
     "helios-distribution-types": "^1.3.0",
     "jquery": "^3.7.1",
     "lodash.merge": "^4.6.2",
     "semver": "^7.6.3",
-    "toml": "^3.0.0"
+    "toml": "^3.0.0",
+    "uuid": "^11.0.3"
   },
   "devDependencies": {
-    "electron": "^33.0.1",
+    "electron": "^33.2.1",
     "electron-builder": "^25.1.8",
-    "eslint": "^8.57.1"
+    "eslint": "^9.17.0"
   },
   "repository": {
     "type": "git",
