Changelog to address the following changes: (this contains Everland changelogs, those changes will be reverted for the next commits since they are not part of the main launcher and everland will get their own repo) - Added a Texture Manager with an skin renderer support (based on the Authlib-Injector scheme) - Support for multiple profiles (based on the Authlib-Injector scheme) - Update Limbo-Core - Fixed URLs - Added a more robust file verification system - Languages are now stored correctly instead of being under the resouces folder - Upstream from Source (yet to do LMAO)

--- a/electron-builder.yml
+++ b/electron-builder.yml
@@ -1,5 +1,5 @@
-appId: 'LimboLauncher'
-productName: 'Limbo Launcher'
+appId: 'EverlandLauncher'
+productName: 'Everland Launcher'
 artifactName: '${productName}-setup-${version}.${ext}'
 
 copyright: 'Copyright © 2024 Limbo-Studios'
@@ -42,7 +42,7 @@ linux:
   target: 'AppImage'
   maintainer: 'IkyMax'
   vendor: 'IkyMax'
-  synopsis: 'Launcher de Limbo-Studios para Lurkarya'
+  synopsis: 'Launcher de Limbo-Studios para Everland'
   description: 'Custom launcher maded for Limbo-Studios projects by IkyMax'
   category: 'Game'
 
