--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
-  "name": "limbolauncher",
-  "version": "2.0.1",
-  "productName": "Limbo Launcher",
-  "description": "Launcher de Limbo-Studios",
+  "name": "everlandvauncher",
+  "version": "2.5.0",
+  "productName": "Everland Launcher",
+  "description": "Launcher de Everland",
   "author": "IkyMax",
   "license": "UNLICENSED",
-  "homepage": "https://github.com/Limbo-Studios/LimboLauncher",
+  "homepage": "https://github.com/Limbo-Studios/EverlandLauncher",
   "bugs": {
-    "url": "https://github.com/Limbo-Studios/LimboLauncher/issues"
+    "url": "https://github.com/Limbo-Studios/EverlandLauncher/issues"
   },
   "private": true,
   "main": "index.js",
@@ -33,13 +33,14 @@
     "fs-extra": "^11.1.1",
     "github-syntax-dark": "^0.5.0",
     "got": "^11.8.5",
-    "limbo-core": "~1.3.1",
+    "limbo-core": "1.4.1-everland",
     "helios-distribution-types": "^1.3.0",
     "jquery": "^3.7.1",
     "lodash.merge": "^4.6.2",
     "semver": "^7.6.3",
     "toml": "^3.0.0",
-    "uuid": "^11.0.3"
+    "uuid": "^11.0.3",
+    "skinview3d": "^3.3.0"
   },
   "devDependencies": {
     "electron": "^33.2.1",
@@ -48,6 +49,6 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/Limbo-Studios/LimboLauncher.git"
+    "url": "git+https://github.com/Limbo-Studios/EverlandLauncher.git"
   }
 }
